Added Developer Info

--- a/homepage.html
+++ b/homepage.html
@@ -93,7 +93,8 @@
         <a href="#VIDEO1">Video: How to test using Swagger</a><br>
         <a href="#VIDEO2">Video: How to test using POSTMAN</a><br><br>
         Sample Inputs<br>
-        <a href="#data">Sample jpgs/pdf files</a>
+        <a href="#data">Sample jpgs/pdf files</a><br><br>
+        <a href="#info">Developer Info</a>
     </div>
 
     <div class="main">
@@ -274,9 +275,19 @@
         <div id="data">
             <h2>Sample jpg/pdf files for testing</h2>
             <p>Download the below files or copy the URLs directly</p>
-            <a href="https://www.ncdot.gov/dmv/downloads/Documents/DL-101.pdf">https://www.ncdot.gov/dmv/downloads/Documents/DL-101.pdf</a>
-            <a href="https://i.pinimg.com/474x/9d/45/79/9d457951f7ce2875b6c6afc0a8e3ef57.jpg">https://i.pinimg.com/474x/9d/45/79/9d457951f7ce2875b6c6afc0a8e3ef57.jpg</a>
+            <a
+                href="https://www.ncdot.gov/dmv/downloads/Documents/DL-101.pdf">https://www.ncdot.gov/dmv/downloads/Documents/DL-101.pdf</a>
+            <a
+                href="https://i.pinimg.com/474x/9d/45/79/9d457951f7ce2875b6c6afc0a8e3ef57.jpg">https://i.pinimg.com/474x/9d/45/79/9d457951f7ce2875b6c6afc0a8e3ef57.jpg</a>
             <img src="images/r1.jpg" alt="API block diagram" width="800" height="800">
+        </div>
+
+        <div id="info">
+            <h2>Developer Info</h2>
+            <h3>Kris Reddivari</h3>
+            <p>Developed as part of Final project for ITIS-6177 System Integration taught by <b>Professor Fabio Nolasco</b></p>
+            <p>Kris Reddivari is currently pursuing Masters in IT program while wokring as a Full Time Web developer in Charlotte.</p>
+            <p>Email: kreddiva@uncc.edu</p>
         </div>
     </div>
 
