--- a/homepage.html
+++ b/homepage.html
@@ -37,7 +37,7 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: white;
+            background-color: rgb(194, 190, 190)
             overflow-x: hidden;
             padding-top: 20px;
             padding-left: 10px;
@@ -125,7 +125,7 @@
         <div id="blockdia">
             <h2>Block diagram</h2>
             <p>Refer to the below image for process flow.</p>
-            <img src="images/d1.jpg" alt="API block diagram" width="990" height="660">
+            <img src="images/d1.jpg" alt="API block diagram" width="1200" height="800">
         </div>
         <div id="apimethods">
             <h2>API methods</h2>
@@ -150,15 +150,15 @@
             <p>The file type must be of .pdf or .jpeg(jpg) or .tiff or .png.</p>
             <p><b>Steps</b></p>
             <p>After you expanded the "Form/ReadfromFile" API method, click on "Try it Out"</p>
-            <img src="images/d12.jpg" alt="tryitout" width="990" height="660">
+            <img src="images/d12.jpg" alt="tryitout" width="1200" height="800">
             <p>Under the paramters section, you should see an option to upload a file.</p>
-            <img src="images/d13.jpg" alt="tryitout" width="990" height="660">
+            <img src="images/d13.jpg" alt="tryitout" width="1200" height="800">
             <p>After you selected the file you would like to be recognized, click Execute. <br>Note: Form Recognition is
                 AI involved process. Please allow few minutes for the repsonse to appear.Be Patient.</p>
-            <img src="images/d14.jpg" alt="tryitout" width="990" height="660">
+            <img src="images/d14.jpg" alt="tryitout" width="1200" height="800">
             <p>Once the API is invoked successfully, you should see the form data in JSON format under the response
                 section.</p>
-            <img src="images/d15.jpg" alt="tryitout" width="990" height="660">
+            <img src="images/d15.jpg" alt="tryitout" width="1200" height="800">
         </div>
         <div id="API2">
             <h3>Form/ReadfromURL</h3>
@@ -169,20 +169,20 @@
             <p>The file type must be of .pdf or .jpeg(jpg) or .tiff or .png.</p>
             <p><b>Steps</b></p>
             <p>After you expanded the "Form/ReadfromURL" API method, click on "Try it Out"</p>
-            <img src="images/d22.jpg" alt="tryitout" width="990" height="660">
+            <img src="images/d22.jpg" alt="tryitout" width="1200" height="800">
             <p>Under the paramters section, you should see the request body with a single field name "URLstring". DO not
                 modify this field name.
                 <br>
                 Enter the address or complete url of the input file. Refer to the image below.
             </p>
-            <img src="images/d23.jpg" alt="tryitout" width="990" height="660">
+            <img src="images/d23.jpg" alt="tryitout" width="1200" height="800">
             <p>After you entered the URL you would like to be recognized, click Execute. <br>Note: Form Recognition is
                 AI involved process and the file needs to be fetched over internet. Please allow few minutes for the
                 repsonse to appear. Be Patient.</p>
-            <img src="images/d24.jpg" alt="tryitout" width="990" height="660">
+            <img src="images/d24.jpg" alt="tryitout" width="1200" height="800">
             <p>Once the API is invoked successfully, you should see the form data in JSON format under the response
                 section.</p>
-            <img src="images/d25.jpg" alt="tryitout" width="990" height="660">
+            <img src="images/d25.jpg" alt="tryitout" width="1200" height="800">
         </div>
         <div id="API3">
             <h3>Receipt/ReadReceiptfromFile</h3>
@@ -191,7 +191,7 @@
             <p>The file type must be of .pdf or .jpeg(jpg) or .tiff or .png.</p>
             <p><b>Steps</b></p>
             <p>After you expanded the "Receipt/ReadReceiptfromFile" API method, click on "Try it Out"</p>
-            <img src="images/d32.jpg" alt="tryitout" width="990" height="660">
+            <img src="images/d32.jpg" alt="tryitout" width="1200" height="800">
             <p>Under the paramters section, you should see an option to upload a file.</p>
             <p>After you selected the file you would like to be recognized, click Execute. <br>Note: Form Recognition is
                 AI involved process. Please allow few minutes for the repsonse to appear.Be Patient.</p>
@@ -209,7 +209,7 @@
             <p>The file type must be of .pdf or .jpeg(jpg) or .tiff or .png.</p>
             <p><b>Steps</b></p>
             <p>After you expanded the "Receipt/ReadReceiptfromURL" API method, click on "Try it Out"</p>
-            <img src="images/d42.jpg" alt="tryitout" width="990" height="660">
+            <img src="images/d42.jpg" alt="tryitout" width="1200" height="800">
             <p>Under the paramters section, you should see the request body with a single field name "URLstring". DO not
                 modify this field name.
                 <br>
