--- a/homepage.html
+++ b/homepage.html
@@ -37,7 +37,7 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: rgb(194, 190, 190);
+            background-color: rgb(204 252 253);
             overflow-x: hidden;
             padding-top: 20px;
             padding-left: 10px;
